[package]
name = "lox-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
cfg-if = "1.0.0"
chumsky = "0.9.3"
clap = { version = "4.5.1", features = ["derive"] }
dynasmrt = "2.0.0"
log = "0.4.20"
simple_logger = "4.3.3"
